// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu should render 1`] = `
<div>
  <div
    class="analytics-dropdown-menu dropdown-menu dropdown-menu-indicator-end"
  >
    <ul
      class="list-unstyled"
    />
  </div>
</div>
`;

exports[`InputItem should render 1`] = `
<div>
  <li
    class="dropdown-item dropdown-item-custom"
  >
    <div
      class="custom-control custom-radio"
    >
      <label>
        <input
          checked=""
          class="custom-control-input"
          type="radio"
          value="1"
        />
        <span
          class="custom-control-label"
        >
          <span
            class="text-truncate custom-control-label-text"
            data-tooltip="false"
            title=""
          >
            label a
          </span>
        </span>
      </label>
    </div>
  </li>
</div>
`;

exports[`OptionItem should render 1`] = `
<div>
  <li>
    <button
      class="dropdown-item "
      href="javascript:;"
    >
      <span
        class="text-truncate"
        data-tooltip="false"
        title=""
      >
        label a
      </span>
      <div
        class="dropdown-item-indicator"
      >
        <span
          class="badge badge-secondary"
        >
          <span
            class="badge-item badge-item-expand"
          >
            1
          </span>
        </span>
      </div>
    </button>
  </li>
</div>
`;
